--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -168,7 +168,8 @@ input {
 #submitButton{
     width:10%;
     text-align: center;
-    margin: 0 0 10px 0;
+    font-size: 10px;
+    margin: 0 0 10px;
     min-width: 65px;
     background-color: #4aaaa5;
     color:white;
@@ -234,10 +235,7 @@ float:none;
     margin: 10px;
 }
 }
-footer {
-    position:fixed;
-    bottom:0; 
-}
+
 
 @media only screen and (max-width: 640px) {
 
@@ -245,45 +243,65 @@ footer {
 width: 100vw;
 text-align: center;
 margin:0 auto;
+float:none;
+padding: 2px 0;
 }
 
 #links {
 width: 100vw;
-text-align: center;
+text-align: center; 
 margin: 0 0 5px 0;
 background-color: #ffffff;
 padding: 10px 0;
 }
 
 .center {
-    margin: 4vh 2vw;
+    margin: 10vh 2vw;
 }
 
 .profile{
-    width:90vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 0 auto;
+    float:none;
+    display:block;
+}
+.picture {
+    float:none;
+    margin: 1vh auto;
 }
 .text {
     float:none;
+    margin-top: 1vh;
 }
 .box1 {
-    width: 85vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 2vh auto;
+    float:none;
+    display:block;
 }
 .box2 {
-    width: 85vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 2vh auto;
+    float:none;
+    display:block;
 }
 .box3 {
-    width: 85vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 2vh auto;
+    float:none;
+    display:block;
 }
 .box4 {
-    width: 85vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 2vh auto;
+    float:none;
+    display:block;
 }
 .box5 {
-    width: 85vw;
-    margin: 0 5px;
+    width:70vw;
+    margin: 2vh auto;
+    float:none;
+    display:block;
 }
+
 }
